Check portfolio optimization, something is wrong

--- a/Task-Latex/dataanalysis.tex
+++ b/Task-Latex/dataanalysis.tex
@@ -1,4 +1,4 @@
-This stage is dedicated to extracting as much information as possible on the cleaned data. This step is necessary to have an idea of what kind of data we have in order to be able to correctly inteprept the results of the chosen model and understand its limitations.
+This stage is dedicated to extracting as much information as possible from the cleaned data. This step is necessary to have an idea of what kind of data we have in order to be able to correctly inteprept the results of the chosen model and understand its limitations.
 The data used in this test is from the 'formatted-data.xlsx' file. It has only been cleaned and scaled to zero mean and unit variance when necessary. It has not yet been divided into training and testing.
 The custom python module \textbf{eda.py} is dedicated to this section.
 
