--- a/Task-Latex/datacleaning.tex
+++ b/Task-Latex/datacleaning.tex
@@ -2,7 +2,7 @@ The input data given for this task is comprised of:
 \begin{enumerate}
     \item Five historical series of daily logarithmic returns pertaining to stock indices from five different geographic regions. (Identified throughout the report as 'Stock returns')
     \item Six historical series of Fundamental Indicators for each geographic area. ('Fundamentals')
-    \item Two historical series of daily log returns for each geographic area. ('Rates returns')
+    \item Two historical series of daily log returns for Rates of each geographic area. ('Rates returns')
     \item Two historical series of Macroeconomic indicators for each geographic area. ('Macro indices')
     \item Three historical series of daily log returns related to currency crossings. ('Forex returns')
     \item Three historical series of log returns for three different commodities. ('Commodities returns')
