The Abstraction and time offset works. I have to fix the use of log returns and normal returns, they are fucking up the results. This is a useful page to look at: https://quant.stackexchange.com/questions/70997/how-to-calculate-the-log-return-of-portfolio

--- a/Task-Latex/optimization.tex
+++ b/Task-Latex/optimization.tex
@@ -31,3 +31,9 @@ Anyway each time I calculate the weights I have to calculate stats for the portf
 
 I could do the overall performance testing on the last year and maybe testing only on the periods of greater variance movement in order to see how the model performs under critical economic conditions. 
 There is alwyas K-Fold cross validation available.
+
+
+Propagazione degli errori di $f(x_1,\dots,x_N)$:
+\begin{equation}
+	\sigma_f = \sqrt{\sum_{i = 1}^{N}(\frac{\partial f}{\partial x_i}\sigma_{x_i})^2}
+\end{equation}
