fixed references and a couple of other small things

--- a/res-latex/dataanalysis.tex
+++ b/res-latex/dataanalysis.tex
@@ -36,7 +36,7 @@ Indice Azionario Paese 5 & -7.539359374959799e-18 & 1.0001179175760244          
 \begin{figure}[htb]
 \centering
 \includesvg[width=\textwidth]{"Images/Normality_Stock_Returns_Combined.svg"}
-\caption{Comparison of stock returns fits against a standardized Gaussian distribution}
+\caption{Comparison of standardized stock log returns fits against a standardized Gaussian distribution}
 \label{fig:stock-returns-normal}
 \end{figure}
 
