--- a/res-latex/introduction.tex
+++ b/res-latex/introduction.tex
@@ -6,7 +6,7 @@ This is the report for the task assigned to me by the team at Minerva Technologi
 Given the amount of data and task's objective I decided to use a simple but effective model: the portfolio will be optimized using a risk-parity approach were the allocation of assets is determined by imposing that each asset's contribution to the portfolio total variance is equal. In order to find the covariance matrix of expected returns based on the historical data, necessary to optimize the portfolio, I decided to use a linear multi-factor model combined with Principal Component Analysis on the factors in order to reduce their dimensionality but also eliminate linear correlation between factors, grouping them by how much they contribute to the overall variation of the factors data.
 
 The model will be tested by dividing the dataset as follows: the last year of data will be reserved as the testing data, the rest will be used for training purposes.
-For each week the model will be retrained and the weights recalculated in order to calculate the portfolio weight matrix and test the portfolio return and volatility. A K-Fold Cross Validation is used on the training data in order to choose the best linear regressor based on the their performance over the cross validation.
+For each week the model will be retrained and the weights recalculated in order to calculate the portfolio weight matrix and test the portfolio return and volatility. A K-Fold Cross Validation is used on the training data in order to choose the best linear regressor based on the their performance scores.
 
 
 Even though normality is required only for the residuals of the linear regression, having data that is approximately normally distributed makes calculation easier since most of the information is captured by the first two moments: mean and variance. For this reason Section \ref{dataanalysis} is dedicated to testing data for its normality as well as for stationarity and cross-asset relationships to better understand the nature of the data and better interpret the result of the model.
