--- a/res-latex/main.tex
+++ b/res-latex/main.tex
@@ -19,9 +19,9 @@
 \usepackage{braket} %Package for Dirack Bra-Ket notation
 \usepackage{layout} %See page layout
 \usepackage{ragged2e} % to justify pieces of text
-\usepackage[sorting=none]{biblatex} %Bibliography package
+\usepackage[sorting=none, backend=biber]{biblatex} %Bibliography package
 \usepackage{amsmath}
-\addbibresource{references.bib } %add references bib file
+\addbibresource{references.bib} %add references bib file
 
 
 
