--- a/res-latex/pca-apt.tex
+++ b/res-latex/pca-apt.tex
@@ -69,12 +69,29 @@ The idea is to use a linear regression model to calculate both $\mathbf{B}$ and 
 
 \subsection{Principal Component Analysis on Factors}
 % calcoli pca e butto assieme al multifactor model. Also YUou could use LASSO with Ridge regression (Elastic Net) before PCA.
-As we have seen in Figure \ref{fig:correlation-heatmap} the highest correlation is between Macro returns and Fundamentals. For this reason, and also to simply the interpretation of the remaining principal components, I decided to use standard PCA between Macro returns and Fundamentals. With these principal components selected I will run standard PCA again against all the other remaining factors.
-The standard Principal Components Analysis basically diagonalizes the covariance matrix and finds its eigenvectors. Using these eigenvectors as the transformation matrix it is possible to write every element of the initial base into the new base where the covariance matrix is diagonal. One can then choose how many principal components to keep, thus how many of the eigenvectors with the biggest eigenvalues to keep. These principal components are directions in the new base that explain the most variance of the analyzed data. CHECK THIS SHIT PARAGRAPH
+As we have seen in Figure \ref{fig:correlation-heatmap} the highest correlation is between Macro returns and Fundamentals. For this reason, and also to simplify the interpretation of the remaining principal components, I decided to use standard PCA between Macro returns and Fundamentals. With these principal components selected I will run standard PCA again against all the other remaining factors and the 'Macro-Fundamental' principal components I found before.
+The standard Principal Components Analysis basically diagonalizes the covariance matrix and finds its eigenvectors. Using these eigenvectors as the transformation matrix it is possible to write every element of the initial base into the new base where the covariance matrix is diagonal (here the absence of covariance). One can then choose how many principal components to keep, thus how many of the eigenvectors with the biggest eigenvalues to keep. These principal components are directions in the new base that explain the most variance of the analyzed data. For this task I decided to choose the first five principal components, after some trial and error I found it was the most optimal choice, as it's shown in the following table and graphs. In reality once should carefully decide how to choose principal components, maybe even forcing a certain total explained variance, leaving the number of components chosen as variable.
 
-Ater PCA I was able to keep 19 principal components out of 56 total factors such that the remaining principal components explain $95$\% of the total variance of factors.
+The following results have been calculated using the whole dataset apart from the last year which was kept for testing purposes.
+In figure \ref{fig:factor-contribution-pca1} we can see the contribution of each Macroeconomic factor and Fundamentals factor to the first five principal components chosen. There are some peaks, suggesting that there are certain factors that prevail on the others but overall the distribution is pretty equal.
+In figure \ref{fig:factor-contribution-pca2} the situation is quite different: we can see that the first three final principal components are basically the same as the first three Macro and Fundamentals principal components; the last two final principal components are a combination of rates, commodities and forex.
+These final five principal components will be used in the next section as the input data to train the linear model.
 
-ADD GRAPH OF PERCENTAGE OF FACTORS CONTRIBUTING TO THE TOP PRINCIPAL COMPONENT 
+TOTAL EXPLAINED VARIANCE
+
+\begin{figure}[htb]
+	\centering
+	\includesvg[width=\textwidth]{Images/factor-contribution-to-pcaMacroFund1.svg}
+	\caption{Macroeconomic and Fundamentals PCA factors loadings}
+	\label{fig:factor-contribution-pca1}
+\end{figure}
+
+\begin{figure}[htb]
+	\centering
+	\includesvg[width=\textwidth]{Images/factor-contribution-to-pca2.svg}
+	\caption{}
+	\label{fig:factor-contribution-pca2}
+\end{figure}
 
 \subsection{Cross Validation of Linear Regressors}
 Here I want to use k-fold cross validation (dividing using TimeSeries) to compare different linear regressor and see which one performs better on the training data.
