Pulled control over cross validation and pca graphs/variance to run.py when calling model.run(...)

--- a/res-latex/pca-apt.tex
+++ b/res-latex/pca-apt.tex
@@ -108,6 +108,7 @@ Table \ref{tab:pca-explained-variance} shows the percentage of the total varianc
 
 \subsection{Cross Validation of Linear Regressors}
 Here I want to use k-fold cross validation (dividing using TimeSeries) to compare different linear regressor and see which one performs better on the training data.
+First I need to show the histogram of the residuals using simple LinearRegression(OSL), then I can motivate the using a more robust regressor, then table with Cross Validation results, then explanation of chosen regressor. (Elastic net regularization, epsilon insensitive (linear support vector regression), SGD).
 
 \subsection{Implementation}
 
