--- a/README.org
+++ b/README.org
@@ -48,3 +48,14 @@ Basically just run *run.py* and choose/uncomment out what you dont need.
 3. something: https://www.math.hkust.edu.hk/~makchen/MAFS5140/Chap3.
 4. huge machine learning library: https://scikit-learn.org/stable/
 5. this one is good too: https://www.statsmodels.org/stable/index.html
+
+* TODO Todo list per module [0/0]
+  + model.py
+    + [-] fix structure linear_regression_model_train -> model_train -> run
+    + [-] check print statements and loggin statements
+    + [-] print portfolio weight matrix based on chosen timeperiod
+    + [-] histogram plot of residuals
+    + [-] check rolling window dates
+    + [-] check variable naming and comments
+    + [-] make func for plotting the portfolio and stocks return with highlight
+      + also fix resampling for timeframes other than daily
