--- a/README.org
+++ b/README.org
@@ -49,6 +49,9 @@ Basically just run *run.py* and choose/uncomment out what you dont need.
 4. huge machine learning library: https://scikit-learn.org/stable/
 5. this one is good too: https://www.statsmodels.org/stable/index.html
 
+Description :: this is the description of a description.
+   
+
 # Ctrl-C Ctrl-C to toggle the checkboxes
 * TODO Todo [0%]
   + [ ] model.py [0/7]
@@ -60,6 +63,6 @@ Basically just run *run.py* and choose/uncomment out what you dont need.
     + [ ] check variable naming and comments
     + [ ] make func for plotting the portfolio and stocks return with highlight
           also fix resampling for timeframes other than daily
-  + [ ] eda.py [0/1] :: something
+  + [ ] eda.py [0/1]
     + [ ] check stock cumulative returns graph  
 	  
