--- a/README.org
+++ b/README.org
@@ -49,8 +49,10 @@ Basically just run *run.py* and choose/uncomment out what you dont need.
 4. huge machine learning library: https://scikit-learn.org/stable/
 5. this one is good too: https://www.statsmodels.org/stable/index.html
 
+
 - Description :: this is the description of a description.
-   
+- Description2 :: asdaosdiasodiaiasodiaosdiaod
+- Description3 :: asdasdasdasdasdasdas 
 
 # Ctrl-C Ctrl-C to toggle the checkboxes
 * TODO Todo [0%]
