Added todo list per module to README.org

--- a/README.org
+++ b/README.org
@@ -56,6 +56,10 @@ exploratory analysis or running the model and optimizing the portfolio.
 - optimize.py :: porfolio optimization using risk-parity
 - run.py :: entry point
 
+** Report
+I have written a report in latex to explain the mathematics and process behind this trading model.
+You can find it [[https://github.com/Mediacom99/quant-research/blob/main/res-latex/main.pdf][here]].
+
 ** Useful links, tips and notes:
 + install python module on Windows: python3.11.exe -m pip install /module_name/
 + Scikit-learn docs: https://scikit-learn.org/stable/
