--- a/README.org
+++ b/README.org
@@ -67,17 +67,29 @@ I have written a [[https://github.com/Mediacom99/quant-research/blob/main/res-la
 + this one is good too: https://www.statsmodels.org/stable/index.html
 
 # Ctrl-C Ctrl-C to toggle the checkboxes
-** TODO Todo [0%]
-  + [ ] *model.py* [0/7]
-    + [ ] fix structure linear_regression_model_train -> model_train -> run
+** TODO Todo [20%]
+  + [-] *model.py* [2/8]
+    + [X] fix structure linear_regression_model_train -> model_train -> run
     + [ ] check print statements and loggin statements
     + [ ] print portfolio weight matrix based on chosen timeperiod
     + [ ] histogram plot of residuals
     + [ ] check rolling window dates
-    + [ ] check variable naming and comments
+    + [X] check variable naming and comments
     + [ ] make func for plotting the portfolio and stocks return with highlight
           also fix resampling for timeframes other than daily
-  + [ ] *eda.py* [0/1]
-    + [ ] check stock cumulative returns graph  
+    + [ ] add max and min variance of single stock over whole testing period
+          so that it can be compared to the total portfolio variance
+  + [-] *eda.py* [2/5]
+    + [ ] check stock cumulative returns graph
+    + [ ] check plotWeeklystd
+    + [ ] maybe add some comments and logs
+    + [X] check naming conventions for funcs
+    + [X] added logger
+  + [X] *clean_data.py* [1/1]
+    + [X] checked everything, good to go
+  + [-] *optimize.py* [1/2]
+    + [X] check naming of funcs
+    + [ ] add comments
+  + [ ] CHECK IMPORT STATEMENTS
 	  
       
