--- a/README.org
+++ b/README.org
@@ -68,7 +68,8 @@ I have written a [[https://github.com/Mediacom99/quant-research/blob/main/res-la
 
 # Ctrl-C Ctrl-C to toggle the checkboxes
 ** TODO Todo [20%]
-  + [-] *model.py* [2/9]
+  + [-] *model.
+    py* [2/9]
     + [X] fix structure linear_regression_model_train -> model_train -> run
     + [ ] check print statements and loggin statements
     + [ ] print portfolio weight matrix based on chosen timeperiod
