--- a/README.org
+++ b/README.org
@@ -69,12 +69,12 @@ I have written a [[https://github.com/Mediacom99/quant-research/blob/main/res-la
 # Ctrl-C Ctrl-C to toggle the checkboxes
 ** TODO Todo [20%]
   + [-] *model.
-    py* [2/9]
+    py* [3/9]
     + [X] fix structure linear_regression_model_train -> model_train -> run
     + [ ] check print statements and loggin statements
     + [ ] print portfolio weight matrix based on chosen timeperiod
     + [ ] histogram plot of residuals
-    + [ ] check rolling window dates
+    + [X] check rolling window dates
     + [X] check variable naming and comments
     + [ ] make func for plotting the portfolio and stocks return with highlight
           also fix resampling for timeframes other than daily
