--- a/README.org
+++ b/README.org
@@ -69,7 +69,7 @@ I have written a [[https://github.com/Mediacom99/quant-research/blob/main/res-la
 # Ctrl-C Ctrl-C to toggle the checkboxes
 ** TODO Todo [20%]
   + [-] *model.
-    py* [3/9]
+    py* [33%]
     + [X] fix structure linear_regression_model_train -> model_train -> run
     + [ ] check print statements and loggin statements
     + [ ] print portfolio weight matrix based on chosen timeperiod
@@ -81,15 +81,15 @@ I have written a [[https://github.com/Mediacom99/quant-research/blob/main/res-la
     + [ ] add max and min variance of single stock over whole testing period
           so that it can be compared to the total portfolio variance
     + [ ] add other portfolio benchmarks like VaR SVaR, RMSE
-  + [-] *eda.py* [2/5]
+  + [-] *eda.py* [40%]
     + [ ] check stock cumulative returns graph
     + [ ] check plotWeeklystd
     + [ ] maybe add some comments and logs
     + [X] check naming conventions for funcs
     + [X] added logger
-  + [X] *clean_data.py* [1/1]
+  + [X] *clean_data.py* [100%]
     + [X] checked everything, good to go
-  + [-] *optimize.py* [1/2]
+  + [-] *optimize.py* [50%]
     + [X] check naming of funcs
     + [ ] add comments
   + [ ] check import statements
