--- a/TODO.org
+++ b/TODO.org
@@ -1,6 +1,6 @@
 # Ctrl-C Ctrl-C to toggle the checkboxes
-* TODO Todo list [0%]
-  + [-] *[[https://github.com/Mediacom99/quant-research/blob/main/src/model.py][model.py]]* [7/9]
+* TODO Todo list [60%]
+  + [-] *[[https://github.com/Mediacom99/quant-research/blob/main/src/model.py][model.py]]* [7/8]
     + [X] fix structure linear_regression_model_train -> model_train -> run
     + [X] check print statements and loggin statements
     + [X] print portfolio weight matrix based on chosen timeperiod
@@ -10,18 +10,18 @@
     + [X] make func for plotting the portfolio and stocks return with highlight
           also fix resampling for timeframes other than daily
     + [X] add graph of weights over time
-  + [-] *[[https://github.com/Mediacom99/quant-research/blob/main/src/eda.py][eda.py]]* [2/6]
-    + [ ] check stock cumulative returns graph
-    + [ ] check plotWeeklystd
-    + [ ] maybe add some comments and logs
+  + [X] *[[https://github.com/Mediacom99/quant-research/blob/main/src/eda.py][eda.py]]* [6/6]
+    + [X] check stock cumulative returns graph
+    + [X] check plotWeeklystd
+    + [X] maybe add some comments and logs
     + [X] check naming conventions for funcs
     + [X] added logger
-    + [ ] check stdout vs logger
-  + [ ] *[[https://github.com/Mediacom99/quant-research/blob/main/src/utils.py][utils.py]]* [0/1]
-    + [ ] for the love of Terry please rename those fucking functions
-  + [-] *[[https://github.com/Mediacom99/quant-research/blob/main/src/clean_data.py][clean_data.py]]* [1/2]
+    + [X] check stdout vs logger
+  + [X] *[[https://github.com/Mediacom99/quant-research/blob/main/src/utils.py][utils.py]]* [1/1]
+    + [X] for the love of Terry please rename those fucking functions
+  + [X] *[[https://github.com/Mediacom99/quant-research/blob/main/src/clean_data.py][clean_data.py]]* [2/2]
     + [X] checked everything, good to go
-    + [ ] check stdout vs logger
+    + [X] check stdout vs logger
   + [-] *[[https://github.com/Mediacom99/quant-research/blob/main/src/optimize.py][optimize.py]]* [3/4]
     + [X] MAJOR RIFACTOR:
       + in optimize.py.optimizePortfoliorun I return the daily simple
